Media query to fix images from being too small on mobile

--- a/style.css
+++ b/style.css
@@ -155,6 +155,10 @@ hr {
   margin: 0;
 }
 
+h2 {
+  margin-top: 0;
+}
+
 #concerts-list {
   display: grid;
   grid-row-gap: 2em;
@@ -211,6 +215,11 @@ img {
   display: none;
 }
 
+@media (max-width: 1100px) {
+  .two-columns {
+    grid-template-columns: 15% 90%;
+  }
+}
 @media (max-width: 768px) {
   .page-container {
     width: auto;
